--- a/index.html
+++ b/index.html
@@ -117,6 +117,12 @@
             <button onclick="clearLocalStorage()" class="bouton-general"><span>Vider le cache <i class="far fa-trash-alt"></i></span></button>
             <button onclick="ajouterFavoris()" class="bouton-general"><span>Ajouter aux favoris <i class="far fa-heart"></i></span></button>
         </div>
+        <div id="position">
+            <a href="https://openweathermap.org/current" title="Data infos" target="_blank" class="dataInfos">D'où proviennent les données météo ?</a>
+            <a href="https://geo.api.gouv.fr/decoupage-administratif/communes" title="Data infos" target="_blank" class="dataInfos">Données des villes</a>
+            <a href="https://fontawesome.com/" title="Intégration d'icons gratuit" target="_blank" class="dataInfos">Icons utilisés sur l'application</a>
+        </div>
+        <p id="version">Version Août 2021</p>
     </footer>
     <!-- Injection des pages Javascript -->
     <script type="text/javascript" src="script.js"></script>
