--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <a href="https://geo.api.gouv.fr/decoupage-administratif/communes" title="Data infos" target="_blank" class="dataInfos">Données des villes</a>
             <a href="https://fontawesome.com/" title="Intégration d'icons gratuit" target="_blank" class="dataInfos">Icons utilisés sur l'application</a>
         </div>
-        <p id="version">Version Août 2021</p>
+        <p id="version">Version 04 Septembre 2021</p>
     </footer>
     <!-- Injection des pages Javascript -->
     <script type="text/javascript" src="script.js"></script>
