--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <script src="gps_coordonnees.js"></script>
     <script src="modeAffichage.js"></script>
     <script src="autocompletion.js"></script>
-    <script src="qualite_air.js"></script>
+    <script src="qualiteAir.js"></script>
     <!-- Fin injection Javascript -->
 </body>
 </html>
